force-app/main/default/objects/Symega_Configuration__c/Symega_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Symega Configuration</label>
</CustomObject>