force-app/main/default/objects/Symega_Configuration__c/fields/Bank_Name_And_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_And_Address__c</fullName>
    <label>Bank Name And Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>