force-app/main/default/objects/Symega_Configuration__c/fields/Buyer_If_other_than_consignee__c.field-meta.xml
<CustomField>
    <fullName>Buyer_If_other_than_consignee__c</fullName>
    <label>Buyer (If other than consignee)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>