force-app/main/default/objects/Symega_Configuration__c/fields/Carton_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Carton_Packaging__c</fullName>
    <label>Carton Packaging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>