force-app/main/default/objects/Symega_Configuration__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <label>Consignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>