force-app/main/default/objects/Symega_Configuration__c/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <label>Declaration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>