force-app/main/default/objects/Symega_Configuration__c/fields/Delete_Comment_Before__c.field-meta.xml
<CustomField>
    <fullName>Delete_Comment_Before__c</fullName>
    <label>Delete Comment Before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>