force-app/main/default/objects/Symega_Configuration__c/fields/Distributor_Doc_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Doc_Category_Name__c</fullName>
    <label>Distributor Doc Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>