force-app/main/default/objects/Symega_Configuration__c/fields/Exception_Notification_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notification_Email_Id__c</fullName>
    <label>Exception Notification Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>