force-app/main/default/objects/Symega_Configuration__c/fields/Exporter_HS_Code__c.field-meta.xml
<CustomField>
    <fullName>Exporter_HS_Code__c</fullName>
    <label>Exporter HS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>