force-app/main/default/objects/Symega_Configuration__c/fields/FERT_Code_Email_Ids__c.field-meta.xml
<CustomField>
    <fullName>FERT_Code_Email_Ids__c</fullName>
    <label>FERT Code Email Ids</label>
    <type>TextArea</type>
</CustomField>