force-app/main/default/objects/Symega_Configuration__c/fields/FSSAI_No__c.field-meta.xml
<CustomField>
    <fullName>FSSAI_No__c</fullName>
    <label>FSSAI No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>