force-app/main/default/objects/Symega_Configuration__c/fields/Lead_Approval_Business_Head_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Approval_Business_Head_Group_Name__c</fullName>
    <label>Lead Approval Business Head Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>