force-app/main/default/objects/Symega_Configuration__c/fields/Lead_Assignment_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_Group_Name__c</fullName>
    <label>Lead Assignment Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>