force-app/main/default/objects/Symega_Configuration__c/fields/Optiva_Syncing_Enable__c.field-meta.xml
<CustomField>
    <fullName>Optiva_Syncing_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optiva Syncing Enable</label>
    <type>Checkbox</type>
</CustomField>