force-app/main/default/objects/Symega_Configuration__c/fields/Optiva_Syncing_Scheduler_Delay__c.field-meta.xml
<CustomField>
    <fullName>Optiva_Syncing_Scheduler_Delay__c</fullName>
    <label>Optiva Syncing Scheduler Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>