force-app/main/default/objects/Symega_Configuration__c/fields/Prod_Families_Send_To_Optiva__c.field-meta.xml
<CustomField>
    <fullName>Prod_Families_Send_To_Optiva__c</fullName>
    <label>Prod Families Send To Optiva</label>
    <type>TextArea</type>
</CustomField>