force-app/main/default/objects/Symega_Configuration__c/fields/Project_Approval_HOD_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Approval_HOD_Group__c</fullName>
    <label>Project Approval HOD Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>