force-app/main/default/objects/Symega_Configuration__c/fields/Pvt_Label_Email_Ids__c.field-meta.xml
<CustomField>
    <fullName>Pvt_Label_Email_Ids__c</fullName>
    <label>Pvt Label Email Ids</label>
    <type>TextArea</type>
</CustomField>