force-app/main/default/objects/Symega_Configuration__c/fields/Return_Notification_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Return_Notification_Email_Id__c</fullName>
    <label>Return Notification Email Id</label>
    <type>TextArea</type>
</CustomField>