force-app/main/default/objects/Symega_Configuration__c/fields/Sales_Ops_Email_Ids__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Email_Ids__c</fullName>
    <label>Sales Ops Email Ids</label>
    <type>TextArea</type>
</CustomField>