force-app/main/default/objects/Symega_Configuration__c/fields/SAP_Head__c.field-meta.xml
<CustomField>
    <fullName>SAP_Head__c</fullName>
    <label>SAP Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>