force-app/main/default/objects/Symega_Configuration__c/fields/symega_address__c.field-meta.xml
<CustomField>
    <fullName>symega_address__c</fullName>
    <label>symega_address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>