force-app/main/default/objects/Symega_Configuration__c/fields/Symega_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Symega_Contact_Info__c</fullName>
    <label>Symega Contact Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>