force-app/main/default/objects/Symega_Configuration__c/fields/Symega_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Symega_Email_Id__c</fullName>
    <label>Symega Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>