force-app/main/default/objects/Symega_Configuration__c/fields/Symega_Web_Info__c.field-meta.xml
<CustomField>
    <fullName>Symega_Web_Info__c</fullName>
    <label>Symega Web Info</label>
    <type>TextArea</type>
</CustomField>